--- a/investing/investing.html
+++ b/investing/investing.html
@@ -83,7 +83,7 @@
 
                     <section>
                          <h2 class="investing-headers">
-                              Financial Planning and Investing
+                              Financial Literacy
                          </h2>
 
                          <p>
@@ -126,176 +126,6 @@
                               <a href="#">Assessing and Rebalancing</a>
                          </li>
                     </ul>
-
-                    <section>
-                         <h2 class="investing-headers" id="portfolio">My Portfolio Building Strategy</h2>
-                         <p> 
-                              I started in 1996 and have been actively investing for 27 years. I have been retired since 2000 and 
-                              doing investing as a hobby. I have a small biotech portfolio I started back in 2011 that I use for playing 
-                              biotech stocks. I typically have between 10 and 20 companies in my portfolio. Right now, I think it 
-                              is well over 30. That is because the market has been in such a huge bear market for biotech
-                              that I have been buying everything I can. I don't like to put too much stock in any one company as biotech is
-                              very speculative, and the statistics show that 90% of these early stage companies fail. I usually don't 
-                              put more than 3% to 5% in any single company. At least not early on. 
-                         </p>  
-                         <p>
-                              I like to play baskets of companies based on key science concepts. I start with concepts like 
-                              Techbio, CRISPR, Synthetic Biology and iPSC. Then I assess every company in that space until I find 
-                              all the top companies I like. I will build a basket of those companies. I typically have 3 to 5 
-                              science themes and each theme has a max cap of 20% of my portfolio. I will usually have 3 to 5 companies 
-                              in each theme. Less than 2 companies and it is not a theme. More than 5 has to be narrowed down to the 
-                              best of the best. 
-                         </p>
-                         <p>
-                              I never risk more than 3% to 5% of my money in any single company. That means I will only exceed that limit
-                              if I have enough capital gains to reduce my cost basis. For example, if I had gains that equal 2% of total 
-                              portfolio in a company, I would be willing to own up to 7% of my total in that company because only 5% of 
-                              that would be my money. The rest is already paid for. Most of the time, I am cutting companies out that did 
-                              not live up to expectations while building positions into new companies into market corrections.
-                         </p>
-                         <p>
-                              I never buy all my stock in a company at one time. I tend to like to nibble away at it as it comes down in 
-                              price. With today's free trading at most brokers, there is no reason to buy a ton of stock at one time unless 
-                              you think you can predict the market. Once I have built my position in a company, I tend to trade around that 
-                              position taking profits when the markets are up and buying some back when the markets are down. I tend to use 
-                              20% as a rule for buying or selling on stock moves, but not always. I like to watch the market sentiment to see 
-                              when things are over loved or over hated. I never sell my core shares in a company unless I think it has become 
-                              fundamentally broken. I try to keep half of my position as my core position and use half for trading around 
-                              my position into the market swings. 
-                         </p>
-                         <p>
-                              I find this strategy works best for me as it gives me the best of long term investing and the best of short 
-                              term trading. It keeps me active enough that I don't get bored and quit, but also focused on the long term so 
-                              I don't miss the bigger picture. This is just my strategy.
-                         </p>
-                         <p class="top-link"><a href="#top">Top</a></p>
-                    </section>
-
-                    <section>
-                         <h2 class="investing-headers" id="fundamentals">Fundamental Analysis</h2>
-                         <p> 
-                              I have always been a fundamental and value investor. I solely focus on picking companies. 
-                              I don't care about charts, and I really don't care about the overall economy. The economy goes 
-                              through its up cycles and it goes through its down cycles. The up cycles are good for taking profits and the down cycles 
-                              are good for accumulating. I focus on the companies. I focus on the fundamentals and the value as they tell me the 
-                              2 most important things about a company. The fundamentals tell me what I should buy. Fundamentals are about the
-                              quality of the company. I also focus on the value of the company. Value tells me when I should buy a company.
-                              Companies go from expensive to cheap as the economy goes through its cycles. I learn to sell some on the up cycle
-                              and buy it back on the down cycle. When it comes to fundamentals, I tend to focus on two key aspects of companies that I feel
-                              are the magic formula to success. They are Management and Science. 
-                         </p>                   
-                    </section>
-               
-                    <section>
-                         <h2 class="investing-headers">Management</h2>
-                         <p> 
-                              Great management can turn even average science into a successful company. Bad management can wreck even 
-                              the best science.  I would never own a company with what I perceive to be weak management. When I look 
-                              at a company's  management, I really look at the CEO. They are the captain of the ship and ultimately 
-                              all decisions go through them. I like to evaluate a company's management over time. It really takes time 
-                              to figure out if management knows what they are talking about, and if they are living up to their promises.
-                         </p>
-                         <p>      
-                              I like to go over at least a year's worth of conferences, webcasts and earnings calls.  I take notes on 
-                              what was promised, like drug development timelines, and then I check off the promises delivered and circle 
-                              those that are not. If they miss a deadline, and they provide a good reason for it, I will let it go. I know
-                              Covid has delayed many company's deadlines. I don't expect perfection. I expect consistency. As long as 
-                              there is not a habit of dropping the ball. I like to follow a company for a few months and listen to 
-                              conferences in real time before I make any commitment to buy. Then I start slowly with a small position and 
-                              only add when I think the company is impressing me with the results like data or events. It is like any other 
-                              relationship. I have to take the time to get to know the company and trust the management before I commit 
-                              my hard earned money to them.
-                         </p>
-                         <p>
-                              A great CEO will be honest and have integrity. They are straight shooters. They are going to tell you what 
-                              they expect and admit when the results don't match up to it.  A weak CEO will try to explain away bad data 
-                              or try to spin bad data as if it were good data. Those are the ones you have to be aware of. A great CEO 
-                              just lets the data speak for itself, and tells the truth. A great CEO is also a great communicator. They 
-                              go to various conferences and love to talk about their company. They also have to be able to communicate 
-                              well. You want to see the CEO be able to handle the tough questions with grace and ease. What I don't want to 
-                              see is a CEO who is hyping or pumping up the science or company. They tend to be the worst with throwing around flashy 
-                              buzz words just to crush investors when it all fails.
-                         </p>
-                         <p>     
-                              A great CEO must be a good financial manager. Managing 
-                              cash balance is key in the biotech market where a stock can go through long periods of "out of favor".  I 
-                              like to see at least 2 years of cash on the balance sheet to get through the lean times. It is also 
-                              important for a CEO to time the secondaries when they will be best received. I like to see them take 
-                              advantage of investor optimism and sell into the big rallies based on good data or just market excitement. Another 
-                              major aspect of good financial management is not recklessly spending money. I see some companies that have 
-                              just so much going on that they burn huge amounts of cash. They become giant money pits. 
-                         </p>
-                         <p>     
-                              A great CEO needs 
-                              to navigate the regulatory process very well.  I see it too often where an inexperienced CEO makes tons of 
-                              blunders with trial design, regulatory submission, manufacturing inspections and communicating with the 
-                              FDA. This leads to delays in timing of trials, clinical holds, Complete Response Letters (CRL's) or even bad 
-                              trial outcomes. It can be hard to know if a CEO is one of these rookies, but it usually shows up quickly in 
-                              the data. 
-                         </p>
-                         <p>     
-                              The 
-                              last and most important attribute of a CEO for me is visionary. A great CEO has to make great decisions 
-                              around company development. They have a vision about their company and where they want it to go. They make 
-                              great decisions to develop the long term story. They make good partnerships where needed. They make good 
-                              decisions about which indications to pursue first. Some CEO's lack decision making and spend a huge amount 
-                              of money trying to chase everything at once. A good leader will pick a few key programs and pursue them to 
-                              commercial before spending more money. A good leader won't always be perfect so I don't sell on just one 
-                              bad event like a trial failure or a delay with a trial. If it becomes a habit by happening more than once, 
-                              then that is an alarm the CEO might not be up to the task. I personally think that management makes up about 
-                              70% of the value of a company.
-                         </p>                         
-                    </section>
-
-                    <section>
-                         <h2 class="investing-headers">Science</h2>
-                         <p> 
-                              The quality of the science is the other part of the magic formula for a winning company. I look for a 
-                              technology platform that can yield many new drugs. I also like companies focused on mastering one 
-                              science. Some companies look like a swap meet of different sciences. They tend to be a Jack of all Trades, 
-                              but a master of none. Here are some attributes that I look for in a company's science and pipeline.
-                         </p> 
-                         <p>
-                              When it comes to science, there is never a lack of great companies out there who are innovating. What I 
-                              focus on is getting the best bang for my buck when it comes to picking science. It all comes down to picking 
-                              the science that has the largest overall potential. If 2 companies have great science, which one has the 
-                              biggest potential? One might have an innovative drug, but it only applies to a few hundred patients. The other
-                              might be just as innovative but help millions of patients. When investing in companies, I want to pick those 
-                              who have innovation, but also the largest potential. That means great companies have more than one drug 
-                              in the pipeline. I don't want any one-hit wonders. They tend to be 
-                              too volatile and way too binary. They are either huge wins or massive losses. They can be gut wrenching.
-                              I want a technology platform that can yield many successful drugs. Those are the big winners when their 
-                              technology works out. They can keep following up one success after another.
-                         </p>      
-                         <p>
-                              I like to look for companies that have science that separates them from the rest of the pack. You want a 
-                              competitive advantage in any business and game changing science is one such method. I want superior 
-                              science compared to peers, or I want a company with no competition in a new area of science. I tend to 
-                              focus on picking areas of science that are leading the technology in the industry. This means I am betting on 
-                              my ability to pick out innovative new science. I have to assume I will be wrong on a lot of these companies as 
-                              they are so speculative and early stage. I manage this using strategy. I pick a basket of companies in a new 
-                              innovative space and place small bets on each. Then I monitor them as they advance the science. I use the data 
-                              to weed out the weak companies and buy more of the winners. I reward success and don't reward failure. Eventually, 
-                              I will jettison the losers when the markets are back in bull market mode, and I can sell them for the best prices.
-                         </p> 
-                         <p>
-                              When evaluating companies as the data comes in, I don't dump a company if they have a failure early on. 
-                              Too many times, I have seen a company fail once just to make a massive comeback. Failure is part of the game 
-                              for early stage biotech. What I don't want to see is a pattern of failure. If I have a company that has a big 
-                              clinical setback, I put them on probation until they get another data readout. Good data forgives the older 
-                              failure, but another failure confirms it. 
-                         </p>
-                         <p>
-                              The final aspect is I focus on key areas of science. Biotech is a big space. There is a lot of science across 
-                              so many areas of disease. I find I do better when I pick a few key areas to focus on. Sure, I might miss a 
-                              great company that develops a good new Alzheimer's drug. That is fine because my focus allows me to be an expert 
-                              in the areas I focus on. I have more success when I focus. I used to cover anything in biotech, but I found that I 
-                              was hindered by areas of science where I did not have the expertise to keep up. That is when I switched to focus 
-                              on key science themes for me. I focus on Genetics, Immunology, Hematology and Oncology. They are all extremely
-                              complementary to each other. Oncology actually requires a mastery of Genetics and Immunology. 
-                         </p>
-                         <p class="top-link"><a href="#top">Top</a></p>                     
-                    </section>
 
                     <section>
                          <h2 class="investing-headers" id="trading">Trading Around a Core Position</h2>
