--- a/investing/planning.html
+++ b/investing/planning.html
@@ -136,9 +136,12 @@
                               necessities and discretionary spending. Then I would break out other categories. My housing would 
                               include rent or mortgage, utilities, and insurance. For my car, I have Tags and Registration, 
                               Inspections, Maintenance, Gas and Insurance. The first step is just to follow the money and figure out 
-                              where it is going and then categorize it into necessities and discretionary. Then break them down into 
-                              other important categories for what is needed the most like food, housing, clothing and transportation 
-                              to work. Everything else might be discretionary.
+                              where it is going and then categorize it into necessities and discretionary. What you don't want to do 
+                              during your period or recording your expenses is to change your behavior. I know some people will have a 
+                              tendency to cut back when they are actively recording their spending. You want to get an accurate picture 
+                              of your spending so make sure you do all the normal things you would do while following your expenses. 
+                              Then break them down into other important categories for what is needed the most like food, housing, 
+                              clothing and transportation to work. Then divide them into necessities, discretionary and savings.
                          </p>
                          <p>
                               Once you know what you are earning and spending, you can sit down and figure out if it balances out. 
@@ -165,6 +168,20 @@
                               retirement. Most people will want something like a new phone, and they will just go out and buy it. They 
                               will worry about how they will pay for it later. The person who plans financially will plan for how they 
                               will pay for something before they ever go out and buy it. 
+                         </p>
+                         <p>
+                              One useful method for people who are new to budgeting is using the Envelope method of budgeting. This 
+                              is where you create an envelope marked on the front for each spending category in your budget. You will end 
+                              up with an envelope for rent, electric, water, groceries, entertainment, and any other categories. You put 
+                              the money in each envelope for the allocated amount of money in the budget. Then you use only the money in 
+                              that envelope for that expense. This helps you understand the consequences of going over budget in a category. 
+                              If you budgeted $100 for clothing and spent $75 on new shoes, but now you want a jacket that is another $100, 
+                              you would only have $25 in the clothing envelope for your budget. You could take money from another envelope, 
+                              but then you might end up short somewhere else at the end of the month. You definitely would not want to take 
+                              from necessities like rent. Not unless you want to get evicted. You would not want to take from gas if you have 
+                              to drive to work. You might take from groceries and cut back on eating for the month. Using the envelope 
+                              method can help you control the budget better for beginners. It can also help you understand the consequences 
+                              of the spending decisions you make.
                          </p>
                          <p>
                               The goal of budgeting is to create a space for savings. You can never get out of debt or build savings 
@@ -336,6 +353,47 @@
 
                     <section>
                          <h2 class="investing-headers" id="managedebt">Managing Debt</h2>
+                         <p>
+                              What is the difference between Credit and Debt? Credit is the amount of money you are able to borrow based 
+                              on your ability to repay the money you borrow. This is often calculated based on your Credit Score. The higher 
+                              your credit score, the more likely you are to repay the money you borrow. This means creditors will be willing 
+                              to lend you more money. This is called your credit limit. This is the total amount of money you can borrow based 
+                              on things like your income, expenses and credit score. Debt is the amount of money you owe based on what you have 
+                              already borrowed against that credit limit. This is often called the Credit Utilization rate. Let us assume you have a credit 
+                              limit that says you can borrow a max of $10,000 dollars based on your income, expenses and credit score. Now, we 
+                              will assume you have one credit card with $2,500 and another $1,000 in credit card debt. The credit utilization 
+                              ratio would be $2,500 plus $1,000 or $3,500 of your credit limit is used out of the $10,000. That means 
+                              you have a credit utilization of 35%. A good credit utilization ratio is 30%. When you go beyond 30% it begins 
+                              to impact your credit score. Knowing how to manage debt well is an important part of financial planning.
+                         </p>
+                         <p>
+                              Credit is the ability to buy products and services now and pay for them over time. Using credit negatively 
+                              impacts your ability to save. Every time you spend money on credit you are spending your future earnings which 
+                              lowers your ability to save. You have to budget to pay back that money you borrow plus any interest on the 
+                              principal. This can make credit costly. How much you pay to use credit is impacted by your credit score. There 
+                              are three credit bureaus which keep a history of our credit report. They are TansUnion, Equifax and Experian. 
+                              Each of these companies keeps a record of your entire credit history. You are entitled to get an annual copy of 
+                              these reports from each of these bureaus each year. The data in these reports can vary from bureau to bureau.
+                              Some of them might even have errors. Your FICO score is a number that represents your total credit score and 
+                              takes the information from the credit bureaus and translates into an easy to use number. The statistics for your 
+                              credit score says that 35% of your score comes from your payment history. This is your history of paying your 
+                              bills on time. Then 30% of the score is how much debt you have borrowed. The length of your credit history accounts 
+                              for 15% of the score. People with short credit histories will naturally have a lower score. The types of credit you use 
+                              also accounts for about 10% of the score. The last 10% is the number of inquiries there are for your credit score. All of
+                              these things go into a formula that translates them into the overall FICO score. The FICO score can range from 300 to 
+                              850. The 300 - 579 range is called Poor credit. Fair credit ranges from 580 to 669. Good credit ranges from 670 to 
+                              739. Very Good credit ranges from 740 to 799. Excellent credit ranges from 800 to 850. The amount of interest 
+                              you will have to pay on any loan or credit card is determined by your credit score. Those with below average credit 
+                              scores will have to pay higher rates while those with high credit scores will get discounts on rates. 
+                         </p>
+                         <p>
+                              There are two types of credit with secured and unsecured credit. When you use secured credit, you have to put up an
+                              asset as collateral. You actually borrow the money against that asset. This can be your car for a car loan or your 
+                              house for a home loan. If you fail to make your payments on a collateralized loan, the borrower can take that asset 
+                              as repayment of the loan. We saw the impacts of this in mass during the 2008 housing crash. Banks foreclosed on loans 
+                              that borrowers could no longer afford to pay. Unsecured credit does not require you to pledge collateral. Instead, the 
+                              amount of money you can borrow is based on your credit worthiness. This will often be things like credit cards. 
+                         </p>
                          <p> 
                               When it comes to debt, there are two kinds of  debt: bad debt and good debt. The average return of the 
                               stock market is 8% return per year over the long term. It will have its big up years and big down years, 
@@ -370,7 +428,7 @@
                               started. They are the snowball and avalanche methods. With both methods, you make a list of all your 
                               credit cards along with the balance on each and the interest rate. As you dedicate money into savings, 
                               it goes to paying down those credit cards. With the snowball method, you start by putting all your 
-                              excess money into the card with the lowest balance while maintianing the minimum payment on all the 
+                              excess money into the card with the lowest balance while maintaining the minimum payment on all the 
                               other cards. Once that card is paid off, you move to the next 
                               card with all the money you can until it is paid off. This method is used the most as it gives 2 
                               bonuses. First is the quick sense of accomplishment when the first card is paid off. The second benefit 
@@ -382,7 +440,7 @@
                               chose, the goal is to wipe out all that credit card debt and then learn to use them correctly. Paying 
                               down that debt means nothing if you don't budget and enact some discipline to prevent racking those 
                               balances back up. Many of those places you see online that are designed to help you consolidate your 
-                              credit cards into a low interest loans to pay down your credit cards, but they don't actually help fix the 
+                              credit cards into low interest loans to pay down your credit cards, but they don't actually help fix the 
                               underlying cause of the spend impulse. People end up using them to pay off their credit cards then they 
                               go out and max them out again. Then they end up with a consolidation loan and still have maxed out 
                               credit card debt. 
