--- a/index.html
+++ b/index.html
@@ -114,8 +114,12 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/21/2023: </strong> I continue to build out my <a href="investing/portfoliobuilding.html">Investing</a>
+                                   page of the website by adding several new sections over the weekend. 
+                              <p> 
+                              <p> 
                                    <strong>2/19/2023: </strong> I added the first 2 sections under my new 
-                                   <a href="investing/portfoliobuilding.html">Portfiol Building</a> and Investing
+                                   <a href="investing/portfoliobuilding.html">Portfolio Building</a> and Investing
                                    section. 
                               </p>
                               <p>
@@ -126,9 +130,6 @@
                               <p> 
                                    <strong>2/17/2023: </strong> Add my newest guide for Risk Management to the Investing Pages.
                               <p> 
-                              <p> 
-                                   <strong>2/17/2023: </strong> Added Cell Biology to the Biology page under learning about the Science.
-                              <p> 
                          </div>
                     </section>
                </div>
@@ -137,7 +138,7 @@
                          <div>
                               <h2 class="section-title">Youtube</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/aK3qbd6OqxY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUl4u3cNGP63LmSVIVzy584-ZbjbJ-Y63" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                               </div>
                          </div>
                     </section>
@@ -146,7 +147,7 @@
                          <div>
                               <h2 class="section-title">Twitter</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/<a href="https://twitter.com/ApellisPharma?ref_src=twsrc%5Etfw">@ApellisPharma</a> announced that the <a href="https://twitter.com/US_FDA?ref_src=twsrc%5Etfw">@US_FDA</a> has approved <a href="https://twitter.com/hashtag/SYFOVRE?src=hash&amp;ref_src=twsrc%5Etfw">#SYFOVRE</a> aimed to treat <a href="https://twitter.com/hashtag/GeographicAtrophy?src=hash&amp;ref_src=twsrc%5Etfw">#GeographicAtrophy</a> <a href="https://twitter.com/hashtag/GA?src=hash&amp;ref_src=twsrc%5Etfw">#GA</a> - secondary condition to age-related macular degeneration <a href="https://twitter.com/hashtag/AMD?src=hash&amp;ref_src=twsrc%5Etfw">#AMD</a>. SYFOVRE is the first and only FDA-approved treatment for GA. <a href="https://twitter.com/search?q=%24APLS&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$APLS</a> <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://twitter.com/hashtag/Genomics?src=hash&amp;ref_src=twsrc%5Etfw">#Genomics</a> <a href="https://twitter.com/hashtag/Ophthalmology?src=hash&amp;ref_src=twsrc%5Etfw">#Ophthalmology</a> <a href="https://twitter.com/cgfran01?ref_src=twsrc%5Etfw">@cgfran01</a> <a href="https://t.co/YfylIFiEZP">pic.twitter.com/YfylIFiEZP</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1626995236697169924?ref_src=twsrc%5Etfw">February 18, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/<a href="https://twitter.com/metagenomi?ref_src=twsrc%5Etfw">@metagenomi</a> announced the close of a Series B exten­sion <a href="https://twitter.com/hashtag/financing?src=hash&amp;ref_src=twsrc%5Etfw">#financing</a> co-led by <a href="https://twitter.com/novoholdings?ref_src=twsrc%5Etfw">@novoholdings</a> &amp; <a href="https://twitter.com/CatalioCapital?ref_src=twsrc%5Etfw">@CatalioCapital</a> with par­tic­i­pa­tion of new <a href="https://twitter.com/hashtag/investors?src=hash&amp;ref_src=twsrc%5Etfw">#investors</a> - <a href="https://twitter.com/LeapsByBayer?ref_src=twsrc%5Etfw">@LeapsByBayer</a> &amp; <a href="https://twitter.com/moderna_tx?ref_src=twsrc%5Etfw">@moderna_tx</a>. This $100M financ­ing brings the total Series B pro­ceeds to $275M. <a href="https://twitter.com/hashtag/CRISPR?src=hash&amp;ref_src=twsrc%5Etfw">#CRISPR</a> <a href="https://twitter.com/hashtag/Genomics?src=hash&amp;ref_src=twsrc%5Etfw">#Genomics</a> <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://t.co/wQtna1yqAe">pic.twitter.com/wQtna1yqAe</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1627720163591061511?ref_src=twsrc%5Etfw">February 20, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
