--- a/investing/investing.html
+++ b/investing/investing.html
@@ -111,19 +111,7 @@
                               <a href="planning.html">Financial Planning</a>
                          </li>
                          <li>
-                              <a href="#">Saving and Investing</a>
-                         </li>
-                         <li>
-                              <a href="portfoliobuilding.html">Buidling a Diviersified Portfolio</a>
-                         </li>
-                         <li>
-                              <a href="#">Managing Taxes and Fees</a>
-                         </li>
-                         <li>
-                              <a href="riskmanagement.html">Risk Management</a>
-                         </li>
-                         <li>
-                              <a href="#">Assessing and Rebalancing</a>
+                              <a href="portfoliobuilding.html">Saving and Investing</a>
                          </li>
                     </ul>
 
