Bug Fixes for Investing

--- a/investing/portfolio.html
+++ b/investing/portfolio.html
@@ -24,7 +24,7 @@
           <meta name="twitter:site:id" content="@biotech2k1">
           <meta name="twitter:creator" content="@biotech2k1">
           <meta name="twitter:title" content="Biotech2k.com">
-          <meta name="twitter:description" content="My Portfolio">
+          <meta name="twitter:description" content="My Biotech Portfolio">
           <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
