--- a/investing/portfoliobuilding.html
+++ b/investing/portfoliobuilding.html
@@ -13,18 +13,18 @@
           </script>
 
           <!-- Page Title -->
-          <title>My Guide to Building a Diversified Portfolio</title>
+          <title>My Guide to Investing</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="My guide to Valuation">
+          <meta name="description" content="Learn about Investing">
           <meta name="author" content="CoderKid2k">
           <meta name="twitter:card" content="summary">
           <meta name="twitter:site:id" content="@biotech2k1">
           <meta name="twitter:creator" content="@biotech2k1">
           <meta name="twitter:title" content="Biotech2k.com">
-          <meta name="twitter:description" content="My Guide to Building a Diversified Portfolio">
+          <meta name="twitter:description" content="My Guide to Investing">
           <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
