--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
-                                   <strong>2/21/2023: </strong> I continue to build out my <a href="investing/portfoliobuilding.html">Investing</a>
-                                   page of the website by adding several new sections over the weekend. 
+                                   <strong>2/21/2023: </strong> I finished the build out my <a href="investing/portfoliobuilding.html">Investing</a>
+                                   page of the website by adding several new sections today. 
                               <p> 
                               <p> 
                                    <strong>2/19/2023: </strong> I added the first 2 sections under my new 
