--- a/investing/investing.html
+++ b/investing/investing.html
@@ -13,18 +13,18 @@
           </script>
 
           <!-- Page Title -->
-          <title>My Strategy to Investing in Biotech</title>
+          <title>My Strategy to Financial Literacy</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Sharing My Strategy around Investing in Biotech">
+          <meta name="description" content="Learn about Financial Literacy">
           <meta name="author" content="CoderKid2k">
           <meta name="twitter:card" content="summary">
           <meta name="twitter:site:id" content="@biotech2k1">
           <meta name="twitter:creator" content="@biotech2k1">
           <meta name="twitter:title" content="Biotech2k.com">
-          <meta name="twitter:description" content="Learn about My Strategy of Investing in Biotech">
+          <meta name="twitter:description" content="Learn about Financial Literacy">
           <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
